--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/built.loader.js";
+      var loaderUrl = buildUrl + "/dist.loader.js";
       var config = {
-        dataUrl: buildUrl + "/built.data.unityweb",
-        frameworkUrl: buildUrl + "/built.framework.js.unityweb",
-        codeUrl: buildUrl + "/built.wasm.unityweb",
-        symbolsUrl: buildUrl + "/built.symbols.json.unityweb",
+        dataUrl: buildUrl + "/dist.data.unityweb",
+        frameworkUrl: buildUrl + "/dist.framework.js.unityweb",
+        codeUrl: buildUrl + "/dist.wasm.unityweb",
+        symbolsUrl: buildUrl + "/dist.symbols.json.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "KJCommons",
         productName: "Ikigai Dashboard Tree",
